--- a/4.html
+++ b/4.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<head><title>김이솔에 관한 쓰잘떼기 없는 얘기</title>
+<head><title>김이솔에 관한 신화적 스토리</title>
 <meta charset="utf-8">
 </head>
 
